--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <div class="container">
     <h1>Hey, I'm Sash!</h1>
-    <p>Just passed 12th. Future therapist in the making. Psychology lover. Hamster mom (kinda).</p>
+    <p>Just passed 12th. lokking future in IT world.</p>
     <div class="quote-box">
       <p>"Healing begins the moment you decide to grow." – Sash</p>
     </div>
