--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <p>"Healing begins the moment you decide to grow." – Sash</p>
     </div>
     <p>Follow my vibe: 
-      <a href="https://instagram.com" target="_blank">Instagram</a>
+      <a href="https://instagram.com/sakshiislayssss" target="_blank">Instagram</a>
     </p>
   </div>
 </body>
